# portfolio

./: README.md  ok_cupid.ipynb  pyproject.toml
okcupid_data/: xgboost_example.ipynb
