[tool.poetry]
name = "portfolio"
version = "1.0.0"
description = "Poetry file to run all of the scripts in this project."
authors = ["McCall Milligan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
optuna = "^3.5.0"
matplotlib = "^3.8.2"
ipykernel = "^6.28.0"
shap = "^0.44.0"
pyarrow = "^14.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
